feat: Integrate OneLogin SAML authentication support. Added OneLogin SAML configuration

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ application-test.yaml
 application-dev.properties
 application-prd.properties
 application-test.properties
+onelogin.properties
 
 ############## Externsions to ignore
 *.class
