--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,7 @@
 saml:
-  issuer-uri: ${saml.issuer-uri}
-  client-redirect: ${saml.client-redirect}
-  public-cert: ${saml.public-cert}
-  public-key: ${saml.public-key}
+  issuer-uri: ${saml-issuer-uri}
+  public-cert: ${saml-public-cert}
+  public-key: ${saml-public-key}
+  redirect-saml: ${redirect-saml}
+  redirect-onelogin: ${redirect-onelogin}
+
